refactor: pinned may be null